Corrected squares in createGridShape.